--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="Sketchpad.png">
+  <meta name="description" content="Andy Ho Resume">
+  <meta name="author" content="862089647">
 
-  <title>John Doe - Business Administration</title>
+  <title>Andy Ho - Medical Assistant</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Andy Ho</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="AndyHo.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Andy Ho
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Biology</div>
+        <p class="lead mb-4">I am here at University of California, Riverside to pursue a college education and explore different aspects of my life. I will spend my next four years here to find my true passion and prepare how to pursue this passion in my future career. I want to become a veterinarian and plan to achieve this goal by balancing my academic and social life in college and finding new opportunities through internships and volunteering. I need to make sure I obtain the best grades I can through efficient study habits, so I will be able to attend my dream school, UCLA School of Medicine. <br><br>
 
-        Enter bio here<br><br>
+        My greatest strength is my ability to work well with others and cooperate for the better of the company. Additionally, I am very open-minded and willing to hear and better understand the opinions and views of others. I am willing to make sacrifices in order to reach a common goa, which ties in with how I am very sociable and easily get along with people I just met.
 
-        Enter bio here
+<br><br>
+
+        My overall career goal is to pursue medicine but specifically a career in pediatric oncology, and I believe the Health Scholar program will provide me essential personal and professional skills that will help accomplish my career goal and accompany me for my future endeavors. I believe that the program will better my communication abilities through interacting with patients and health care staff, and I understand that these abilities are pivotal for a career in medicine and even more for a career in pediatric oncology. Although I know that I will not necessarily be working with children as patients, any communication experience with patients will still be beneficial and provide me with necessary practice, especially in comforting and understanding their needs. Furthermore, building strong relationships with health care staff through the program will allow me to gain a better insight into careers in medicine and the administrative aspects of health care. Working with health care staff and leaders will also provide me with the opportunity to receive advice on task management and work-life balance that will help prepare me for the journey ahead of me to accomplish my career goal. I am confident that the program can aid me with knowledge of effective patient care, which is imperative in the field of pediatric oncology, and I believe the only method to learn effective patient care is through direct experience. In addition, the specialties rotation of the program will provide me with great insight into a variety of health care areas that I might have not considered before. Although I am currently set on pursuing a career in pediatrics or pediatric oncology, I am open to attaining experience with different specialties of medicine to witness others' passions in effect.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/andy-ho-094457210/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/H0ho66">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/andy_hoho_">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="andy.ho@email.ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Peer Educatorr</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://arc.ucr.edu/">University of California, Riverside</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Tutor college freshman students in Algebra and Pre-Calculus<br> 
+              • Guide students through transition from high school to college<br>
+              • Encourage good work ethics and instilled self-confidence<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Undergraduate Research Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://entomology.ucr.edu/">Department of Entomology, University of California, Riverside</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Perform weekly cockroach rearing and maintenance<br>
+              • Aid in setting up experiments and carrying out data collection at selected time intervals<br>
+              • Run analysis of data to determine Lethal Dose (LD50) and Lethal Time (LT50) of various bait toxicants<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">April 2021 - present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Recreation Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.fremont.gov/">Fremont Government</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Responsible for children aged four to twelve<br>
+            • Organized and planned a variety of games and sports<br>
+            • Communicated with parents about how their children were doing at camp<br
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2017 - August 2017</span>
           </div>
         </div>
 
@@ -151,34 +153,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California, Riverside</h3>
+            <div class="subheading mb-3">Biological Sciences</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">June 2022</span>
           </div>
         </div>
 
@@ -191,7 +170,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="Gel Image.JPG" width="500px">
+            <img src="Moth.jpg" width="500px"><br>
+            <img src="Screenshot (60).png" width="500px">
+            <img src="Screenshot (80).png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +181,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Andy Ho</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
